--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <header class="header">
     <div class="header__logo"></div>
     <ul class="header__links">
-      <li><a class="header__lang-link header__lang-link_underline" href="#">Ru</a></li>
-      <li><a class="header__lang-link" href="#">En</a></li>
+      <li><a class="header__lang-link header__lang-link_underline" href="#" target="_self">Ru</a></li>
+      <li><a class="header__lang-link" href="#" target="_self">En</a></li>
     </ul>
   </header>
   <main class="content">
@@ -61,7 +61,7 @@
         <div class="place__website">
           <div>
             <p class="place__url-heading">URL</p>
-            <a class="place__link" href="#">park-kosa.ru</a>
+            <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
           </div>
         </div>
         <div class="place__paragraphs">
@@ -77,7 +77,7 @@
         <div class="place__website">
           <div>
             <p class="place__url-heading">URL</p>
-            <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
+            <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
           </div>
         </div>
         <div class="place__paragraphs">
@@ -93,7 +93,7 @@
         <div class="place__website">
           <div>
             <p class="place__url-heading">URL</p>
-            <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
+            <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
           </div>
         </div>
         <div class="place__paragraphs">
@@ -108,7 +108,7 @@
         <div class="place__website">
           <div>
             <p class="place__url-heading">URL</p>
-            <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+            <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
           </div>
         </div>
         <div class="place__paragraphs">
@@ -124,7 +124,7 @@
         <div class="place__website">
           <div>
             <p class="place__url-heading">URL</p>
-            <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru</a>
+            <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru</a>
           </div>
         </div>
         <div class="place__paragraphs">
@@ -135,7 +135,7 @@
       </div>
     </section>
     <section class="cover">
-      <a href="https://stampsy.com/na-elektrichkakh-do-baikala">
+      <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
         <div class="cover__overlay">
           <h2 class="cover__title">До Байкала «на собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие
@@ -146,11 +146,11 @@
   </main>
   <footer class="footer">
     <ul class="footer__links">
-      <li><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
-      <li><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
-      <li><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
-      <li><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
-      <li><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
+      <li><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
+      <li><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
+      <li><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
+      <li><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
+      <li><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
     </ul>
     <p class="footer__copyright">© 2020. Дмитрий Филиппов</p>
   </footer>
