--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="pages/index.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Путешествия по России</title>
 </head>
 
@@ -33,36 +33,34 @@
         по родной стране. Мы выбрали
         и описали некоторые интересные места, достойные вашего отпуска.</p>
       <ul class="intro__list">
-        <li>Часовых поясов <span>11</span></li>
-        <li>Объектов природного наследия ЮНЕСКО <span>12</span></li>
-        <li>Объектов культурного наследия ЮНЕСКО <span>16</span></li>
-        <li>Природных заповедников <span>105</span></li>
-        <li>Аэропортов <span>241</span></li>
+        <li>Часовых поясов <span class="intro__span-item">11</span></li>
+        <li>Объектов природного наследия ЮНЕСКО <span class="intro__span-item">12</span></li>
+        <li>Объектов культурного наследия ЮНЕСКО <span class="intro__span-item">16</span></li>
+        <li>Природных заповедников <span class="intro__span-item">105</span></li>
+        <li>Аэропортов <span class="intro__span-item">241</span></li>
       </ul>
     </section>
     <section class="photo-grid">
-      <img class="photo-grid__item" src="./images/__item1.jpg" alt="#">
-      <img class="photo-grid__item" src="./images/__item2.jpg" alt="#">
-      <img class="photo-grid__item" src="./images/__item3.jpg" alt="#">
-      <img class="photo-grid__item" src="./images/__item4.jpg" alt="#">
-      <img class="photo-grid__item" src="./images/__item5.jpg" alt="#">
-      <img class="photo-grid__item" src="./images/__item6.jpg" alt="#">
-      <img class="photo-grid__item" src="./images/__item7.jpg" alt="#">
-      <img class="photo-grid__item" src="./images/__item8.jpg" alt="#">
-      <img class="photo-grid__item" src="./images/__item9.jpg" alt="#">
-      <img class="photo-grid__item" src="./images/__item10.jpg" alt="#">
-      <img class="photo-grid__item" src="./images/__item11.jpg" alt="#">
-      <img class="photo-grid__item" src="./images/__item12.jpg" alt="#">
+      <img class="photo-grid__item" src="./images/__item1.jpg" alt="вид из купе поезда в окно">
+      <img class="photo-grid__item" src="./images/__item2.jpg" alt="горы и облака">
+      <img class="photo-grid__item" src="./images/__item3.jpg" alt="собака на стоге сена в поле">
+      <img class="photo-grid__item" src="./images/__item4.jpg" alt="лес в тумане с высоты">
+      <img class="photo-grid__item" src="./images/__item5.jpg" alt="колесо автомобиля на прозрачном льду">
+      <img class="photo-grid__item" src="./images/__item6.jpg" alt="на переднем фоне - пляж, на заднем - горы">
+      <img class="photo-grid__item" src="./images/__item7.jpg" alt="горы">
+      <img class="photo-grid__item" src="./images/__item8.jpg" alt="знак пешеходного перехода">
+      <img class="photo-grid__item" src="./images/__item9.jpg" alt="горы с высоты в тумане">
+      <img class="photo-grid__item" src="./images/__item10.jpg" alt="гора в дали">
+      <img class="photo-grid__item" src="./images/__item11.jpg" alt="горы">
+      <img class="photo-grid__item" src="./images/__item12.jpg" alt="горы в тумане">
     </section>
     <section class="places">
       <div class="place">
         <h2 class="place__title">Куршская коса</h2>
-        <img class="place__image" src="images/kursh_kosa.jpg" alt="Куршская коса">
+        <img class="place__image" src="./images/kursh_kosa.jpg" alt="Куршская коса">
         <div class="place__website">
-          <div>
-            <p class="place__url-heading">URL</p>
-            <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
-          </div>
+          <p class="place__url-heading">url</p>
+          <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
         </div>
         <div class="place__paragraphs">
           <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона
@@ -75,10 +73,10 @@
         <h2 class="place__title">Кольский</h2>
         <img class="place__image" src="images/Kolskiy.jpg" alt="Кольский">
         <div class="place__website">
-          <div>
-            <p class="place__url-heading">URL</p>
-            <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
-          </div>
+
+          <p class="place__url-heading">url</p>
+          <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
+
         </div>
         <div class="place__paragraphs">
           <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг —
@@ -91,10 +89,10 @@
         <h2 class="place__title">Алтай</h2>
         <img class="place__image" src="images/Altay.jpg" alt="Алтай">
         <div class="place__website">
-          <div>
-            <p class="place__url-heading">URL</p>
-            <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
-          </div>
+
+          <p class="place__url-heading">url</p>
+          <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
+
         </div>
         <div class="place__paragraphs">
           <p class="place__paragraph">Алтай — одно из красивейших мест в России.
@@ -106,10 +104,10 @@
         <h2 class="place__title">Зимний Байкал</h2>
         <img class="place__image" src="images/baikal.jpg" alt="Зимний Байкал">
         <div class="place__website">
-          <div>
-            <p class="place__url-heading">URL</p>
-            <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
-          </div>
+
+          <p class="place__url-heading">url</p>
+          <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
+
         </div>
         <div class="place__paragraphs">
           <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
@@ -122,10 +120,10 @@
         <h2 class="place__title">Карелия</h2>
         <img class="place__image" src="images/karelia.jpg" alt="Карелия">
         <div class="place__website">
-          <div>
-            <p class="place__url-heading">URL</p>
-            <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru</a>
-          </div>
+
+          <p class="place__url-heading">url</p>
+          <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru</a>
+
         </div>
         <div class="place__paragraphs">
           <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный.
@@ -135,7 +133,7 @@
       </div>
     </section>
     <section class="cover">
-      <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+      <a class="cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
         <div class="cover__overlay">
           <h2 class="cover__title">До Байкала «на собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие
@@ -145,16 +143,16 @@
     </section>
   </main>
   <footer class="footer">
-    <ul class="footer__links">
-      <li class="footer__link-item"><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
-      <li class="footer__link-item"><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
-      <li class="footer__link-item"><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
-      <li class="footer__link-item"><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
-      <li class="footer__link-item"><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
-    </ul>
-    <p class="footer__copyright">© 2020. Дмитрий Филиппов</p>
+    <nav>
+      <ul class="footer__links">
+        <li class="footer__link-item"><a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a></li>
+        <li class="footer__link-item"><a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a></li>
+        <li class="footer__link-item"><a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a></li>
+        <li class="footer__link-item"><a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a></li>
+        <li class="footer__link-item"><a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a></li>
+      </ul>
+    </nav>
+    <p class="footer__copyright">&copy; 2020. Дмитрий Филиппов</p>
   </footer>
 
-</body>
-
-</html>
+</body></html>
